# haproxy

haproxy-backend-ui/: README.md  pyproject.toml  requirements.txt
haproxy-backend-ui/examples/: haproxy.audit.jsonl  haproxy.cfg  haproxy.cfg.20251105_114848.bak  haproxy.cfg.20251105_122304.bak  haproxy.cfg.20251105_170532.bak  haproxy.cfg.20251105_224810.bak  haproxy.cfg.20251106_161226.bak  haproxy.cfg.bak  haproxy.pending.jsonl
haproxy-backend-ui/src/: main.py
haproxy-backend-ui/src/core/: config.py  manager.py  parser.py
haproxy-backend-ui/src/services/: reloader.py
haproxy-backend-ui/src/ui/: dialogs.py  main_window.py
haproxy-backend-ui/tests/: test_manager.py  test_parser.py
