[tool.poetry]
name = "haproxy-backend-ui"
version = "0.1.0"
description = "A user interface for editing and managing HAProxy backends."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"